# leaument

./: README.md  pyproject.toml
leaument/: constants.py  converter.py  main.py  templates.py
scripts/: day_values.json  parse_day_values_from_wikipedia.py
templates/: day.html  index.html
tests/: test_constants.py  test_converter.py
