[tool.poetry]
name = "leaument"
version = "0.1.0"
description = ""
authors = ["Louise <louise@zanier.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
starlette = "^0.34.0"
jinja2 = "^3.1.2"
uvicorn = "^0.25.0"
pydantic = "^2.5.3"
python-multipart = "^0.0.6"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
ipdb = "^0.13.13"
beautifulsoup4 = "^4.12.2"
httpx = "^0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
